# astrograph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  makefile  todo.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: general.md
.github/workflows/: cli-tests.yml  clippy.yml  code-cov.yml  lib-tests.yml  release.yml  tests.yml  todos.yml  wasm-tests.yml
assets/: packSolarSystem.sh  solar-system.json  solar-system.observatories.json  solar-system.program.json
assets/test/: rotation.observatories.json  rotation.universe.json
assets/test/constellation/: observatories.json  universe.json
lib/: Cargo.toml  README.md
lib/benches/: program.rs
lib/src/: consts.rs  lib.rs  program.rs
lib/src/body/: mod.rs  observatory.rs  rotating.rs
lib/src/constelation/: mod.rs  weak.rs
lib/src/constellation/: mod.rs  weak.rs
lib/src/dynamic/: fixed.rs  keplerian.rs  mod.rs
lib/src/generator/: artifexian.rs  mod.rs
lib/src/generator/artifexian/: mod.rs  moon.rs  planet.rs  star.rs
lib/src/output/: mod.rs  svg.rs  svgStyle.css  web.rs
lib/src/output/logger/eclipse/: collision_check.rs  mod.rs
lib/src/projection/: mod.rs
lib/src/wasm/: mod.rs
lib/tests/: file_output.rs  generator.rs
src/: consts.rs  lib.rs  program.rs
src/body/: mod.rs  observatory.rs  rotating.rs
src/dynamic/: fixed.rs  keplerian.rs  mod.rs
src/generator/: artifexian.rs  mod.rs
src/output/: mod.rs  svg.rs  web.rs
src/projection/: mod.rs  orthographic.rs
src/wasm/: mod.rs
tests/: file_output.rs  generator.rs
tools/: build-targets.sh  push-check.sh  render.sh  render.zsh
wasm/: Cargo.toml  README.md  rust-toolchain.toml.future
wasm/src/: lib.rs
wasm/src/output/: mod.rs
web/: index.html  index.js  slideshow.js
