[package]
name = "astrolabe"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "A library dedicated to provinding astronomical predictions of non-chaotic and deterministic bodies."
readme = "README.md"
repository = "https://github.com/2sugarcubes/astrolabe"
keywords = ["astronomy", "physics", "mathmatics"]
categories = ["aerospace::simulation", "mathmatics", "science", "simulation"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["f64"]
f64 = []

[dependencies]
coordinates = { version = "0.3.1", features = ["serde"] }
quaternion = "1.0.0"
dyn-clone = "1.0.17"
dyn_partial_eq = "0.1.2"
svg = "0.18.0"
derive_builder = "0.20.2"
xorshift = "0.1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
typetag = "0.2.18"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
assert_float_eq = "1.1.3"
serde_json = "1.0"
wasm-bindgen-test = "0.2"


[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
