[workspace]
members = ["lib", "bin"]
resolver = "2"

[workspace.package]
name = "astrolabe-bin"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "A library dedicated to provinding astronomical predictions of non-chaotic and deterministic bodies."
repository = "https://github.com/2sugarcubes/astrolabe"
keywords = ["astronomy", "physics", "mathmatics", "simulation"]
categories = ["aerospace::simulation", "mathmatics", "science", "simulation"]
authors = ["Lucy <105619409+2sugarcubes@users.noreply.github.com>"]

[profile.release]
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
