[package]
name = "astrolabe"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["f64"]
f64 = []

[dependencies]
coordinates = { version = "0.3.1", features = ["serde"] }
quaternion = "1.0.0"
dyn-clone = "1.0.17"
dyn_partial_eq = "0.1.2"
svg = "0.18.0"
derive_builder = "0.20.2"
serde = { version = "1.0", features = ["derive", "rc"] }
typetag = "0.2.18"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = { version = "0.1", features = ["serde"] }

[dev-dependencies]
assert_float_eq = "1.1.3"
serde_json = "1.0"
wasm-bindgen-test = "0.2"
rand_xorshift = "0.3.0"
