[package]
name = "astrolabe"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[[bench]]
name = "program"
harness = false

[features]
default = ["f64"]
f64 = []

[dependencies]
coordinates = { version = "0.3.1", features = ["serde"] }
quaternion = "1.0.0"
dyn-clone = "1.0.17"
dyn_partial_eq = "0.1.2"
svg = "0.18.0"
derive_builder = "0.20.2"
serde = { version = "1.0", features = ["derive", "rc"] }
typetag = "0.2.18"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
log = "0.4.25"
rayon = "1.10.0"

[dev-dependencies]
assert_float_eq = "1.1.3"
serde_json = "1.0"
wasm-bindgen-test = "0.2"
rand_xorshift = "0.3.0"
criterion = { version = "0.5", features = ["html_reports"] }
