[package]
name = "astrolabe-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[features]
default = ["f64"]
f64 = []


[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8.5"
rand_xorshift = "0.3.0"
astrolabe = { path = "../lib/" }
wasm-bindgen = "0.2"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = { version = "0.1", features = ["serde"] }
svg = "0.18"
itertools = "0.8"
rayon = "1.8"
wasm-bindgen-rayon = "1.2"
