[package]
name = "astrograph-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]
bench = false


[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8.5"
rand_xorshift = "0.3.0"
astrograph = { path = "../lib/", version = "0.1", default-features = false }
wasm-bindgen = "0.2"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = { version = "0.1", features = ["serde"] }
svg = "0.18"
wasm-log = "0.3.1"
rayon = "1.8"

#TODO: add support for web workers
#Issue URL: https://github.com/2sugarcubes/astrograph/issues/133

#wasm-bindgen-rayon = "1.2"
#[target.wasm32-unknown-unknown]
#rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]

#[unstable]
#build-std = ["panic_abort", "std"]

[dev-dependencies]
coordinates = "0.4.0"
wasm-bindgen-test = "0.3"
